--- a/examples/jobs/envoy/envoy.yaml
+++ b/examples/jobs/envoy/envoy.yaml
@@ -1,8 +1,13 @@
+admin:
+  access_log_path: /dev/null
+  address:
+    socket_address: { address: 127.0.0.1, port_value: 9901 }
+
 static_resources:
   listeners:
   - name: listener_0
     address:
-      socket_address: { address: 0.0.0.0, port_value: $SERVICE_PORT }
+      socket_address: { address: 0.0.0.0, port_value: 25000 }
     filter_chains:
     - filters:
       - name: envoy.http_connection_manager
@@ -16,14 +21,13 @@ static_resources:
               domains: ["*"]
               routes:
               - match: { prefix: "/" }
-                route: { cluster: foo-svc }
+                route: { cluster: nomad-svc }
           http_filters:
           - name: envoy.router
   clusters:
-  - name: foo-svc
+  - name: nomad-svc
     connect_timeout: 0.25s
     lb_policy: ROUND_ROBIN
-    http2_protocol_options: {}
     type: EDS
     eds_cluster_config:
       eds_config:
@@ -35,8 +39,4 @@ static_resources:
     type: STATIC
     lb_policy: ROUND_ROBIN
     http2_protocol_options: {}
-    hosts: [{ socket_address: { address: $XDS_IP, port_value: $XDS_PORT }}]
-admin:
-  access_log_path: /dev/null
-  address:
-    socket_address: { address: 127.0.0.1, port_value: 9901 }
+    hosts: [{ socket_address: { address: 172.17.0.1, port_value: 8500 }}]
