--- a/examples/jobs/envoy/Makefile
+++ b/examples/jobs/envoy/Makefile
@@ -1,13 +1,16 @@
-category	:= service
-name		:= envoy
-aws_reg		:= us-east-1
-aws_aid		:= <aws_account_id>
-aws_profile     := playground
+category		:= service
+name				:= envoy
+aws_reg     := us-east-1
+aws_profile := playground
 
 docker_dir := consul-envoy-xds
 ################################################################################################################
 # NOTE: The following lines can keep untouched. There is nothing more to configure the category and the name.  #
 #################################################################################################################
+
+# obtain aws account id
+aws_aid     := $(shell aws sts get-caller-identity --output text --query 'Account' --profile $(aws_profile))
+
 ecr_url  := $(aws_aid).dkr.ecr.$(aws_reg).amazonaws.com
 
 # Create version tag from git commit message. Indicate if there are uncommited local changes.
