--- a/examples/jobs/logging/fluentd/Dockerfile
+++ b/examples/jobs/logging/fluentd/Dockerfile
@@ -1,9 +1,16 @@
 # fluentd/Dockerfile
-RUN ["gem", "install", "fluent-plugin-elasticsearch"]
-RUN ["gem", "install", "fluent-plugin-grok-parser", "--no-rdoc", "--no-ri", "--version", "2.1.4"]
-RUN ["gem", "install", "fluent-plugin-kv-parser", "--no-rdoc", "--no-ri", "--version", "1.0.0"]
 FROM fluent/fluentd:v1.2-onbuild
 
+RUN apk add --update --virtual .build-deps \
+  sudo build-base ruby-dev \
+  && sudo gem install --no-rdoc --no-ri\
+  fluent-plugin-elasticsearch \
+  fluent-plugin-grok-parser:2.1.4 \
+  fluent-plugin-kv-parser:1.0.0 \
+  && sudo gem sources --clear-all \
+  && apk del .build-deps \
+  && rm -rf /var/cache/apk/* \
+  /home/fluent/.gem/ruby/2.4.0/cache/*.gem
 
 EXPOSE 8002
 
