--- a/examples/jobs/logging/fluentd/fluent.conf
+++ b/examples/jobs/logging/fluentd/fluent.conf
@@ -121,3 +121,62 @@
     @type stdout
   </store>
 </match>
+
+
+#
+# Prometheus
+#
+# count number of incoming records per tag
+<filter service.**>
+  @type prometheus
+  <metric>
+    name fluentd_input_status_num_records_total
+    type counter
+    desc The total number of incoming records
+    <labels>
+      tag ${tag}
+      hostname ${hostname}
+    </labels>
+  </metric>
+  </filter>
+
+# count number of outgoing records per tag
+<match *.**>
+  @type copy
+  <store>
+    @type forward
+    <server>
+      name fluentd_prometheus_metrics
+      host localhost
+      port "#{ENV['LOGGING_FLUENTD_PORT']}"
+      weight 60
+    </server>
+  </store>
+  <store>
+    @type prometheus
+    <metric>
+      name fluentd_output_status_num_records_total
+      type counter
+      desc The total number of outgoing records
+      <labels>
+        tag ${tag}
+        hostname ${hostname}
+      </labels>
+    </metric>
+  </store>
+</match>
+
+# expose metrics in prometheus format
+<source>
+  @type prometheus
+  bind 0.0.0.0
+  port "#{ENV['MONITORING_FLUENTD_PORT']}"
+  metrics_path /metrics
+</source>
+<source>
+  @type prometheus_output_monitor
+  interval 10
+  <labels>
+    hostname ${hostname}
+  </labels>
+</source>
