--- a/test/Gopkg.toml
+++ b/test/Gopkg.toml
@@ -32,3 +32,7 @@
 [[constraint]]
   name = "github.com/gruntwork-io/terratest"
   version = "~0.17.4"
+
+[[constraint]]
+  name = "github.com/hashicorp/consul"
+  version = "~1.4.4"
