.UPDATE Test Consul Example WORKING + Validity checks for cluster setup
The consul cluster is deployed and it is check if there is a leader elected and
if there are active members in the cluster.
This should be sufficient to verify a working cluster setup.

Furthermore a helper script to export the generated private SSH key was added to
facilitate debugging of the tests.

--- a/test/Gopkg.toml
+++ b/test/Gopkg.toml
@@ -36,3 +36,7 @@
 [[constraint]]
   name = "github.com/hashicorp/consul"
   version = "~1.4.4"
+
+[[constraint]]
+  name = "github.com/knq/pemutil"
+  branch = "master"
