.BUGFIX terratest_log_parser setup step was broken

--- a/test/Makefile
+++ b/test/Makefile
@@ -52,7 +52,7 @@ os:
 
 install_terratest_log_parser:
 	@curl --location --silent --fail --show-error -o terratest_log_parser https://github.com/gruntwork-io/terratest/releases/download/$(TT_VERSION)/terratest_log_parser_$(OS_VERSION)
-	@chmod +x terr satest_log_parser
+	@chmod +x terratest_log_parser
 	mv terratest_log_parser $(TT_INSTALL_PATH)
 
 cleanup:
