--- a/test/Makefile
+++ b/test/Makefile
@@ -7,7 +7,7 @@
 # - IMPORTANT: Check Gopkg.toml to align with the used go package version!
 TT_VERSION="v0.17.4"
 # Installation path for terratest helper tools
-TT_INSTALL_PATH="~/bin"
+TT_INSTALL_PATH=$(HOME)/bin/
 
 # Check: test/README.md for further details
 TIMEOUT="60m"
@@ -31,7 +31,7 @@ endif
 # - Creation of a summary
 define out_parsing
 @echo "--- Tests finished parsing output ---"
-@terratest_log_parser -testlog $(TEST_OUTPUT) -outputdir $(TEST_OUTPUT_DIR) --log-level "warning"
+@$(TT_INSTALL_PATH)/terratest_log_parser -testlog $(TEST_OUTPUT) -outputdir $(TEST_OUTPUT_DIR) --log-level "warning"
 @echo "--- Output parsing finished ---"
 endef
 
