.NEW basic terratest for root-example
The test is quite limited and only checks if the cluster is healthy.
Currently the communication of services inside the cluster and usage of
the cluster from the outside is not tested, but will be part of future commits.

--- a/test/Gopkg.toml
+++ b/test/Gopkg.toml
@@ -38,5 +38,9 @@
   version = "~1.4.4"
 
 [[constraint]]
+  name = "github.com/hashicorp/nomad"
+  version = "~0.9.0"
+
+[[constraint]]
   name = "github.com/knq/pemutil"
   branch = "master"
