--- a/test/Makefile
+++ b/test/Makefile
@@ -51,6 +51,7 @@ os:
 	@echo $(OS_VERSION)
 
 install_terratest_log_parser:
+	@mkdir -p $(TT_INSTALL_PATH)
 	@curl --location --silent --fail --show-error -o terratest_log_parser https://github.com/gruntwork-io/terratest/releases/download/$(TT_VERSION)/terratest_log_parser_$(OS_VERSION)
 	@chmod +x terratest_log_parser
 	mv terratest_log_parser $(TT_INSTALL_PATH)
