fix: missing bin folder
It seems the default GOBIN folder is not created during the setup of golang.

Nevertheless the path is needed to install the dependencies.

--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -18,6 +18,7 @@ jobs:
 
     - name: Get dependencies
       run: |
+        mkdir -p "${GOBIN}"
         go get -v -t -d ./...
         if [ -f test/Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
