--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -18,6 +18,7 @@ jobs:
 
     - name: Get dependencies
       run: |
+        export GOBIN=$(go env GOPATH)/bin
         mkdir -p "${GOBIN}"
         go get -v -t -d ./...
         if [ -f test/Gopkg.toml ]; then
