--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,4 @@
        - image: circleci/golang:1.13.5
      steps:
        - checkout
-       - run: echo "A first golang: " && go version
+       - run: go version
