fix: missing GOBIN in PATH
Missing GOBIN path in the general PATH definition lead to undefined command: dep.

--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         export GOBIN=$(go env GOPATH)/bin
         mkdir -p "${GOBIN}"
+        export PATH=$PATH:$GOBIN
         go get -v -t -d ./...
         if [ -f test/Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
