--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,4 @@
        - image: circleci/golang:1.13.5
      steps:
        - checkout
-       - run: make -f test/Makefile
+       - run: cd test && make
