fix: golang working directory configuration
Working directory needs to follow golang folder structure.

References
- https://circleci.com/docs/2.0/language-go/#config-walkthrough

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
  version: 2
  jobs:
    build:
+     working_directory:
+       - /go/src/github.com/MatthiasScholz/cos
      docker:
        - image: circleci/golang:1.13.5
      steps:
