--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,7 @@
  version: 2
  jobs:
    build:
-     working_directory:
-       - /go/src/github.com/MatthiasScholz/cos
+     working_directory: /go/src/github.com/MatthiasScholz/cos
      docker:
        - image: circleci/golang:1.13.5
      steps:
