--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,4 @@
        - image: circleci/golang:1.13.5
      steps:
        - checkout
-       - run: cd test && make
+       - run: cd test && make all
