fix: moving repository to the correct place
Initial checkout does not respect golang folder structure requirements.

https://github.com/actions/setup-go/issues/12

--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -21,6 +21,9 @@ jobs:
         export GOBIN=$(go env GOPATH)/bin
         mkdir -p "${GOBIN}"
         export PATH=$PATH:$GOBIN
+        mkdir -p $GOPATH/src/github.com/$GITHUB_REPOSITORY
+        mv $(pwd)/* $GOPATH/src/github.com/$GITHUB_REPOSITORY
+        cd $GOPATH/src/github.com/$GITHUB_REPOSITORY
         go get -v -t -d ./...
         if [ -f test/Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
