fix: unset GOPATH
GOPATH environment variable was not set.

https://github.com/actions/setup-go/issues/12

--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -18,6 +18,7 @@ jobs:
 
     - name: Get dependencies
       run: |
+        export GOPATH=$HOME/go
         export GOBIN=$(go env GOPATH)/bin
         mkdir -p "${GOBIN}"
         export PATH=$PATH:$GOBIN
