--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -32,4 +32,10 @@ jobs:
         fi
 
     - name: Build
-      run: make -f test/Makefile
+      run: |
+        export GOPATH=$HOME/go
+        export GOBIN=$(go env GOPATH)/bin
+        mkdir -p "${GOBIN}"
+        export PATH=$PATH:$GOBIN
+        cd $GOPATH/src/github.com/$GITHUB_REPOSITORY
+        cd test && make all
