feat: CircleCI configuration for test execution
After several attempts to find out the version lets consider it a best-practice to provide the info information

--- a/test/Makefile
+++ b/test/Makefile
@@ -37,6 +37,7 @@ endef
 
 # Define: Generic test execution
 define run_test
+@go version
 go clean -testcache
 go test -v -timeout $(TIMEOUT) -p 1 -run $@ | tee $(TEST_OUTPUT)
 $(out_parsing)
@@ -45,6 +46,7 @@ endef
 all: setup test_all
 
 setup: install_terratest_log_parser
+	@go version
 	dep ensure -vendor-only -v
 
 os:
@@ -63,6 +65,7 @@ cleanup:
 
 # ALL: Execute all tests
 test_all: cleanup
+	@go version
 	go clean -testcache
 	go test -v -timeout $(TIMEOUT) -p 1 | tee $(TEST_OUTPUT)
 	$(out_parsing)
