--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,4 @@
        - image: circleci/golang:1.14.2
      steps:
        - checkout
-       - run: cd test && make all
+       - run: make -f test/Makefile
