--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,4 @@
        - image: circleci/golang:1.14.2
      steps:
        - checkout
-       - run: pwd && make all
+       - run: pwd && ls -la && make all
