--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -38,4 +38,4 @@ jobs:
         mkdir -p "${GOBIN}"
         export PATH=$PATH:$GOBIN
         cd $GOPATH/src/github.com/$GITHUB_REPOSITORY
-        cd test && make all
+        cd test && make TestBastionExample
