--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -32,6 +32,9 @@ jobs:
         fi
 
     - name: Build
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
         export GOPATH=$HOME/go
         export GOBIN=$(go env GOPATH)/bin
