:pencil: further hints regarding coloring

--- a/test/Makefile
+++ b/test/Makefile
@@ -34,6 +34,7 @@ endif
 # Define some output formatting helpers
 define echoinfo
       # FIXME Colors not support by github actions terminal: @tput setaf 4
+			# NOTE Error "tput: No value for $TERM and no -T specified"
       @echo $1
       # FIXME Colors not support by github actions terminal: @tput sgr0
 endef
