--- a/modules/ami2/install-nomad/nomad.service
+++ b/modules/ami2/install-nomad/nomad.service
@@ -7,6 +7,8 @@ After=network-online.target
 [Service]
 ExecStart=/opt/nomad/bin/nomad agent -config /opt/nomad/config  -data-dir /opt/nomad/data
 ExecReload=/bin/kill -HUP $MAINPID
+Restart=always
+RestartSec=30
 LimitNOFILE=65536
 
 [Install]
