:sparkles: AMI testing during creation
Checking the AMI during the packer build step using goss.

--- a/modules/ami2/Makefile
+++ b/modules/ami2/Makefile
@@ -22,6 +22,22 @@ nomad-consul-docker-ecr.json:
 
 nomad-consul-docker.json:
 	packer build -var aws_region=$(aws_region) nomad-consul-docker.json
+# NOTE AMIs are validated using goss, which needs to be supported with an additional plugin:
+# -> https://github.com/YaleUniversity/packer-provisioner-goss
+goss_provisioner_version := 2.0.0
+goss_provisioser_archive := packer-provisioner-goss-v$(goss_provisioner_version)-darwin-amd64.tar.gz
+goss_provisioner_source_path := https://github.com/YaleUniversity/packer-provisioner-goss/releases/download/v$(goss_provisioner_version)/$(goss_provisioser_archive)
+goos_provisioner_binary := packer-provisioner-goss
+goos_provisioner_install_path := ~/.packer.d/plugins/$(goos_provisioner_binary)
+prepare:
+	@echo "INFO :: Downloading goss packer plugin and install locally: $(goos_provisioner_install_path)"
+	curl --location --remote-name $(goss_provisioner_source_path) --silent
+	@tar -xvf $(goss_provisioser_archive)
+	@rm -f $(goss_provisioser_archive)
+	@chmod +x $(goos_provisioner_binary)
+	mv $(goos_provisioner_binary) $(goos_provisioner_install_path)
 
 nomad-consul-docker-ecr-cni.json:
 	packer build -var aws_region=$(aws_region) nomad-consul-docker-ecr-cni.json
+uninstall:
+	rm -f $(goos_provisioner_install_path)
