--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -2,8 +2,41 @@ name: Go
 on: [push]
 jobs:
 
-  build:
-    name: Build
+  analyze:
+    name: Analyze
+    runs-on: ubuntu-latest
+    steps:
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Markdown Linter
+      uses: reviewdog/action-remark-lint@v1
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        reporter: github-pr-check
+
+    - name: Script Linter
+      uses: reviewdog/action-shellcheck@v1
+      with:
+        github_token: ${{ secrets.github_token }}
+        reporter: github-pr-review
+        pattern: "*.sh"
+        exclude: "./.git/*"
+
+    - name: Terraform Linter
+      uses: reviewdog/action-tflint@master
+      with:
+        github_token: ${{ secrets.github_token }}
+
+    - name: GoLang Linter
+      uses: reviewdog/action-golangci-lint@v1
+      with:
+          golangci_lint_flags: "--enable-all --exclude-use-default=false"
+          workdir: test/
+
+  test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
 
@@ -25,7 +58,7 @@ jobs:
         go get -v -t -d ./...
         cd test && make setup
 
-    - name: Build
+    - name: TestBastionExample
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
