--- a/.github/workflows/go_test.yml
+++ b/.github/workflows/go_test.yml
@@ -1,41 +1,68 @@
 name: Go
-on: [push]
+on: [push, pull_request, pull_request_review]
 jobs:
 
-  build:
-    name: Build
+  analyze:
+    name: Analyze
+    runs-on: ubuntu-latest
+    steps:
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Markdown Linter
+      uses: reviewdog/action-remark-lint@v1
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        reporter: github-pr-check
+
+    - name: Script Linter
+      uses: reviewdog/action-shellcheck@v1
+      with:
+        github_token: ${{ secrets.github_token }}
+        reporter: github-pr-review
+        pattern: "*.sh"
+        exclude: "./.git/*"
+
+    - name: Terraform Linter
+      uses: reviewdog/action-tflint@master
+      with:
+        github_token: ${{ secrets.github_token }}
+
+    - name: GoLang Linter
+      uses: reviewdog/action-golangci-lint@v1
+      with:
+          golangci_lint_flags: "--enable-all --exclude-use-default=false"
+          workdir: test/
+
+  test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
 
     - name: Set up Go 1.15
-      uses: actions/setup-go@v1
+      uses: actions/setup-go@v2
       with:
         go-version: 1.15
       id: go
 
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
 
     - name: Get dependencies
       run: |
         export GOPATH=$HOME/go
-        export GOBIN=$(go env GOPATH)/bin
-        mkdir -p "${GOBIN}"
-        export PATH=$PATH:$GOBIN
         mkdir -p $GOPATH/src/github.com/$GITHUB_REPOSITORY
         mv $(pwd)/* $GOPATH/src/github.com/$GITHUB_REPOSITORY
         cd $GOPATH/src/github.com/$GITHUB_REPOSITORY
         go get -v -t -d ./...
         cd test && make setup
 
-    - name: Build
+    - name: TestBastionExample
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
         export GOPATH=$HOME/go
-        export GOBIN=$(go env GOPATH)/bin
-        mkdir -p "${GOBIN}"
-        export PATH=$PATH:$GOBIN
         cd $GOPATH/src/github.com/$GITHUB_REPOSITORY
         cd test && make TestBastionExample
